--- a/intro-page.html
+++ b/intro-page.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
       <!--HTML and css link-->
-      <link rel="stylesheet" href="css/css.css">
+      <link rel="stylesheet" href="css.css">
 
       <title>Welcome wanderer!</title>
 
@@ -42,17 +42,17 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="container">
-                  <img class="d-block w-100" src="./image/bul1.jpg" alt="First slide">
+                  <img class="d-block w-100" src="bul1.jpg" alt="First slide">
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="container">
-                  <img class="d-block w-100" src="./image/uk1.jpg" alt="Second slide">
+                  <img class="d-block w-100" src="uk1.jpg" alt="Second slide">
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="container">
-                  <img class="d-block w-100" src="./image/vn1.jpg" alt="Third slide">
+                  <img class="d-block w-100" src="vn1.jpg" alt="Third slide">
                 </div>
               </div>
             </div>
